styles.css
/* ... */
.search-icon {
  background-position: -832px -832px;
  margin: 0 auto;
}

.search-icon:hover {
  background-position: -848px -848px;
}

.menu {
  display: none;
}

.menu .container {
  height: 16px;
}

.menu span {
  display: block;
  background: #f42;
  height: 3px;
  width: 25px;
  margin: 0 auto;
}

.menu span:nth-child(2) {
  margin-top: 4px;
  margin-bottom: 4px;
}

/* Featured Grid */

.featured-grid {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas: 
  "main sub1"
  "main sub2";
  min-height: 60vh;
  margin: 1em 1em 7em;
}

.featured-grid > * {
  background: #555;
}

.featured-grid li a {
  text-decoration: none;
  color: #aaa;
}

.featured-grid li a:hover {
  color: #fff;
}

.story {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  flex-flow: column;
  justify-content: flex-end;
  padding: .5em 2em 1em 2em;
  background: left/cover no-repeat;
}

.story h2 {
  font-family: "Work Sans", sans-serif;
  font-size: 1.5em;
  color: #fff;
  margin-bottom: 5px;
}

.story h5 {
  color: #fff;
  font-family: "Exo", sans-serif;
  font-size: .8rem;
  margin-bottom: 5px;
  font-weight: 400;
}

.story ul {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
}

.story li {
  list-style-type: none;
  color: #aaa;
  font-size: .8rem;
}

.main-story {
  position: relative;
  grid-area: main;
  font-size: 2em;
  background-image: linear-gradient(transparent, #000), url(images/top-story.png);
}

.side1-story {
  grid-area: sub1;
  background-image: linear-gradient(rgba(0,0,0, .3), #000), url(images/side1-story.jpg);
}

.side2-story {
  grid-area: sub2;
  background-image: linear-gradient(rgba(0,0,0, .3), #000), url(images/side2-story.png);
}

.date {
  position: absolute;
  right: 1em;
  top: 1em;
  color: #fff;
  font-family: "Helvetica Neue", sans-serif;
  font-size: .5em;
}

.time-icon {
  background-position: -128px -128px;
  margin-right: 3px;
  vertical-align: top;
}

.share-icon {
  background-position: -880px -880px;
  margin-right: 3px;
  vertical-align: text-bottom; 
}

/* Wrapper */

.wrapper {
  margin: 0 auto;
  max-width: 1192px;
  padding: 0 20px;
  font-family: "Helvetica Neue", sans-serif;
}

/* Content Grid */

section h2 a {
  font-family: "Work Sans", sans-serif;
  color: rgb(255, 68, 34);
  text-decoration: none;
}

section h2 a:hover {
  color: #000;
}

.content-grid {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  margin-top: 1em;
}

.content-grid img {
  width: 100%;
  height: 8em;
  object-fit: cover;
}

.content-grid a {
  color: #000;
  text-decoration: none;
}

.content-grid a:hover {
  color: rgb(255, 68, 34);
  text-decoration: underline;
}

.content-grid h3 {
  font-family: "Helvetica Neue", sans-serif;
  font-size: .9em;
  margin-top: .5em; 
}

.content-grid .author,
.content-grid .author a {
  color: #aaa;
  font-size: .8em;
  margin-top: .5em;
}

.content-grid .author a:hover {
  color: #000;
  text-decoration: none;
}

/* Investments */

.index-co {
  margin-top: 3em;
}

.investments-title {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  justify-content: space-between;
}

.investment-links {
  list-style-type: none;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
}

.investment-links a {
  text-decoration: none;
  color: rgb(255, 68, 34); 
}

.investment-links a:hover {
  color: #000;
}

.investment-links li:after {
  content: "|";
  margin: 0 5px;
  color: rgb(255, 68, 34);
}

.investment-links li:last-child:after {
  content: "";
}

.investments {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
  margin-top: 2em;
}

.investments {
  background:rgb(255, 248, 247);
}

.company {
  display: block;
  position: relative;
  margin-bottom: 0;
}

.company-logo {
  height: 60px;
  width: 60px;
  position: absolute;
  top: 1em;
  left: .75em;
}

.company > h4 {
  color: #fff;
  background: rgb(255, 68, 34);
  padding: .75em 1em .75em 5.5em;
}

.company hgroup {
  background: rgba(255, 68, 34, .08);
  padding: .75em 1em .75em 5.5em;
}

.company hgroup h4 {
  font-size: .9em;
}

.company hgroup h5 {
  font-family: "Exo", sans-serif;
  font-weight: 300;
  font-size: .7em;
  color: #555;
}

.card, .details {
  color: #333;
  font-size: .8em;
  padding: 1em;
}

.card {
}

.card p {
  padding: .3em;
}

.details {
  border-top:  1px solid rgba(255, 68, 34, .3);
}

.details span {
  color: #999;
}

/* Categories */

.categories {
  margin-top: 2em;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
}

.category h5 {
  font-family: "Exo", sans-serif;
  font-weight: 400;
}

.category-popular {
  background: linear-gradient(transparent, #000), url(images/categorybackground1.jpg) no-repeat left/cover;
  height: 20em;
  color: #fff;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  flex-flow: column;
  justify-content: flex-end;
  padding: 1em;
  margin-top: 1em;
}

.category-popular h3 {
  font-family: "Work Sans", sans-serif;
  margin-top: .2em;
}

.category-popular p {
  font-family: "Helvetica Neue", Arial, sans-serif;
  color: #999;
  font-size: .9em;
  margin-top: .5em;
}

.category-latest {
  display: grid;
  grid-template-rows: auto 1fr;
  grid-template-areas: 
    "latest pic"
    "title  pic";
  color: #f42;
  margin-top: 2px;
  padding-left: 1em;
  background: rgba(255, 68, 34, .08);
}

.category-latest h5 {
  grid-area: latest;
  margin-top: .5em;
}

.category-latest h4 {
  grid-area: title;
  margin-top: .5em;
  font-size: .9em;
}

.category-latest img {
  grid-area: pic;
  justify-self: end;
  height: 5em;
  width: 5em;
  object-fit: cover;
}
/* ... */

